--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "youtube-clone",
   "version": "1.0.0",
   "description": "A full Youtube Clone with main focus on Backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev":"nodemon src/index.js"
+    
   },
   "keywords": [
     "javascript",
     "backend"
   ],
   "author": "Osama Abbasi",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
